--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "nodemon server.js",
+    "start": "node server.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.2",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.1",
+    "react-bits": "^1.0.5",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
