--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemailer": "^7.0.5",
     "react": "^19.1.1",
     "react-bits": "^1.0.5",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
