--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
-    "nodemailer": "^7.0.5",
     "react": "^19.1.1",
-    "react-bits": "^1.0.5",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1"
   },
